agregando estilos y nuevo parrafo

--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
 
     <a class="button" href="#">Get Started</a>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, maxime facilis? Architecto ipsum cumque fugit nisi officia ipsam? Dolor delectus eaque a provident, nesciunt voluptate fugit fuga doloremque perspiciatis? Blanditiis!</p>
+
 </body>
 </html>
